--- a/prive/objets/liste/factures.html
+++ b/prive/objets/liste/factures.html
@@ -12,27 +12,28 @@
 	[<caption><strong class="caption">(#ENV*{titre,#GRAND_TOTAL|singulier_ou_pluriel{factures:info_1_facture,factures:info_nb_factures}})</strong></caption>]
 		<thead>
 			<tr class='first_row'>
+				<th class='id' scope='col'>[(#TRI{id_facture,#,ajax})]</th>
 				<th class='nocomptable' scope='col'>[(#TRI{no_comptable,No,ajax})]</th>
 				<th class='id_auteur' scope='col'>[(#TRI{id_auteur,Aut,ajax})]</th>
 				<th class='montant_ht' scope='col'>[(#TRI{montant_ht,HT,ajax})]</th>
 				<th class='montant' scope='col'>[(#TRI{montant,TTC,ajax})]</th>
-				<th class='regle' scope='col'>[(#TRI{montant_regle,Réglé,ajax})]</th>
 				<th class='date' scope='col'>[(#TRI{date_paiement,<:date:>,ajax})]</th>
 				<th class='parrain' scope='col'>[(#TRI{parrain,Parrain,ajax})]</th>
-				<th class='id' scope='col'>[(#TRI{id_facture,<:info_numero_abbreviation:>,ajax})]</th>
+				<th class='action' scope='col'></th>
 			</tr>
 		</thead>
 		<tbody>
 		<BOUCLE_factures(factures){id_facture?}{where?}{recherche?}{tri #ENV{par,id_facture},#GET{defaut_tri}}{pagination #ENV{nb,10}}>
 			<tr class="[(#COMPTEUR_BOUCLE|alterner{row_odd,row_even})]">
-				<td class="nocomptable"><a href='[(#URL_PAGE{facture}|parametre_url{id_facture,#ID_FACTURE}|parametre_url{hash,#DETAILS|md5})]' id='f#ID_FACTURE'>#NO_COMPTABLE</a></td>
-				<td class="id_auteur"><a href='[(#ID_AUTEUR|generer_url_entite{auteur})]'>#ID_AUTEUR</a></td>
-				<td class="montant_ht">#MONTANT_HT</td>
-				<td class="montant">#MONTANT</td>
-				<td class="regle">#MONTANT_REGLE</td>
-				<td class="date">#DATE_PAIEMENT</td>
-				<td class="parrain">#PARRAIN</td>
 				<td class="id"><a href='[(#URL_PAGE{facture}|parametre_url{id_facture,#ID_FACTURE}|parametre_url{hash,#DETAILS|md5})]'>#ID_FACTURE</a></td>
+				<td class="nocomptable"><a href='[(#URL_PAGE{facture}|parametre_url{id_facture,#ID_FACTURE}|parametre_url{hash,#DETAILS|md5})]' id='f#ID_FACTURE'>#NO_COMPTABLE</a>
+					[<br /><small>(#INFO_NOM{auteur,#ID_AUTEUR})</small>]</td>
+				<td class="id_auteur"><a href='[(#ID_AUTEUR|generer_url_entite{auteur})]'>#ID_AUTEUR </a></td>
+				<td class="montant_ht">#MONTANT_HT</td>
+				<td class="montant">#MONTANT[(#MONTANT_REGLE|=={#MONTANT}|non)<br /><span class="warning">Réglé : #MONTANT_REGLE</span>]</td>
+				<td class="date">[(#DATE_PAIEMENT|affdate_heure)]</td>
+				<td class="parrain">#PARRAIN</td>
+				<td class="action"><small>#BOUTON_ACTION{Renvoyer,#URL_ACTION_AUTEUR{renvoyer_facture,#ID_FACTURE,#SELF}}</small></td>
 			</tr>
 		</BOUCLE_factures>
 		</tbody>
