--- a/prive/objets/liste/factures.html
+++ b/prive/objets/liste/factures.html
@@ -23,18 +23,18 @@
 			</tr>
 		</thead>
 		<tbody>
-		<BOUCLE_factures(factures){id_facture?}{id_auteur?}{where?}{recherche?}{tri #ENV{par,id_facture},#GET{defaut_tri}}{pagination #ENV{nb,10}}>
+		<BOUCLE_factures(factures){id_facture?} {date_paiement>=#ENV{date_debut,0000-00-00}}{date_paiement<=#ENV{date_fin,3000-00-00}}{id_auteur?}{where?}{recherche?}{tri #ENV{par,id_facture},#GET{defaut_tri}}{pagination #ENV{nb,10}}>
 			<tr class="[(#COMPTEUR_BOUCLE|alterner{row_odd,row_even})]">
 				<td class="id"><a href='[(#URL_PAGE{facture}|parametre_url{id_facture,#ID_FACTURE}|parametre_url{hash,#DETAILS|md5})]'>#ID_FACTURE</a></td>
 				<td class="nocomptable"><a href='[(#URL_PAGE{facture}|parametre_url{id_facture,#ID_FACTURE}|parametre_url{hash,#DETAILS|md5})]' id='f#ID_FACTURE'>#NO_COMPTABLE</a>
 					[<br /><small>(#INFO_NOM{auteur,#ID_AUTEUR})</small>]</td>
 				<td class="id_auteur"><a href='[(#ID_AUTEUR|generer_url_entite{auteur})]'>#ID_AUTEUR </a></td>
 				<td class="montant_ht">#MONTANT_HT</td>
-				<td class="montant">#MONTANT[(#MONTANT_REGLE|=={#MONTANT}|non)<br /><span class="warning">Réglé : #MONTANT_REGLE</span>]</td>
+				<td class="montant">#MONTANT[(#MONTANT_REGLE|=={#MONTANT}|non)<br /><span class="warning">R&eacute;gl&eacute; : #MONTANT_REGLE</span>]</td>
 				<td class="date">[(#DATE_PAIEMENT|affdate_heure)]</td>
 				<td class="parrain">#PARRAIN</td>
 				<td class="action">[(#ENV{id_resend}|=={#ID_FACTURE}|?{
-					'<span class="success">Renvoyée</span>',
+					'<span class="success">Renvoy&eacute;e</span>',
 					[<small>(#BOUTON_ACTION{Renvoyer,#URL_ACTION_AUTEUR{renvoyer_facture,#ID_FACTURE,#SELF|parametre_url{id_resend,#ID_FACTURE}}})</small>]
 					})]</td>
 			</tr>
