--- a/factures/top.html
+++ b/factures/top.html
@@ -1,2 +1,6 @@
-<div class='header'>
-</div>
+<header class='header'>
+	<h1 id="logo_site_spip"[ class="(#EDIT{meta-nom_site})"]>[(#LOGO_SITE_SPIP|image_reduire{300,100}) ]#NOM_SITE_SPIP
+		[<small id="slogan_site_spip"[ class="(#EDIT{meta-slogan_site})"]>(#SLOGAN_SITE_SPIP)</small>]
+	</h1>
+	[<p class="email"><a href="mailto:#CONFIG{factures/email}">(#CONFIG{factures/email})</a></p>]
+</header>
