Numero de TVA intra dans la config et la facture (mention obligatoire)

--- a/factures/top.html
+++ b/factures/top.html
@@ -3,4 +3,5 @@
 		[<small id="slogan_site_spip"[ class="(#EDIT{meta-slogan_site})"]>(#SLOGAN_SITE_SPIP)</small>]
 	</h1>
 	[<p class="email"><a href="mailto:#CONFIG{factures/email}">(#CONFIG{factures/email})</a></p>]
+	[<p class="no_tva_intra"><:factures:label_no_intra_tva:><br />(#CONFIG{factures/no_intra_tva})</p>]
 </header>
