Gestion des factures PROFORMA sur les reglements en attente Une facture PROFORMA est une "facture comme si", dont la numerotation n'interfere pas avec la numerotation sequentielle des factures, et qui n'a pas de valeur comptable Elle permet de se faire payer en presentant le document qui a une valeur commerciale (comme un bon de commande, mais au format de la future facture) On utilise le pipeline trig_bank_reglement_en_attente pour generer la facture proforma sur les reglements en attente, et le nouveau pipeline bank_afficher_reglement_en_attente pour afficher le lien de telechargement sur la page bank_retour_attente
+ compat SPIP 3.2

--- a/facture_proforma.html
+++ b/facture_proforma.html
@@ -1,6 +1,6 @@
 #CACHE{600}
 #HTTP_HEADER{Content-Type: text/html; charset=#CHARSET}
-<B_facture>
+<B_facture_proforma>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
@@ -10,9 +10,9 @@
 [<link rel="stylesheet" href="(#CHEMIN{factures/facture.css})" type="text/css" media="all" />]
 </head>
 <body>
-<BOUCLE_facture(factures){id_facture}>[(#ENV{hash,''}|=={#DETAILS|md5}|oui)
-[(#INCLURE{fond=factures/corps,id_facture,hash=#ENV{hash,''}})]
-]</BOUCLE_facture>
+<BOUCLE_facture_proforma(factures_proforma){id_facture_proforma}>[(#ENV{hash,''}|=={#DETAILS|md5}|oui)
+[(#INCLURE{fond=factures/corps_proforma,id_facture_proforma,hash=#ENV{hash,''}})]
+]</BOUCLE_facture_proforma>
 </body>
 </html>
-</B_facture>
+</B_facture_proforma>
