--- a/prive/squelettes/contenu/factures.html
+++ b/prive/squelettes/contenu/factures.html
@@ -1,2 +1,2 @@
-<h1 class="grostitre"><:factures:icone_factures:></h1>
+<h1 class="grostitre"><:factures:titre_page_factures:></h1>
 <INCLURE{fond=prive/objets/liste/factures,env,ajax,nb=50} />
