La pagination dans une balise <nav> et non <p>

--- a/prive/objets/liste/factures_proforma.html
+++ b/prive/objets/liste/factures_proforma.html
@@ -38,7 +38,7 @@
 		</BOUCLE_factures_proforma>
 		</tbody>
 	</table>
-	[<p class='pagination'>(#PAGINATION{prive})</p>]
+	[<nav class='pagination'>(#PAGINATION{prive})</nav>]
 </div>
 </B_factures_proforma>[
 <div class="liste-objets breves caption-wrap"><strong class="caption">(#ENV*{sinon,''})</strong></div>
