--- a/prive/objets/liste/factures.html
+++ b/prive/objets/liste/factures.html
@@ -43,7 +43,7 @@
 		</BOUCLE_factures>
 		</tbody>
 	</table>
-	[<p class='pagination'>(#PAGINATION{prive})</p>]
+	[<nav class='pagination'>(#PAGINATION{prive})</nav>]
 </div>
 </B_factures>[
 <div class="liste-objets breves caption-wrap"><strong class="caption">(#ENV*{sinon,''})</strong></div>
