--- a/facture_proforma.html
+++ b/facture_proforma.html
@@ -9,7 +9,7 @@
 <meta name="author" content="<:meta_author:>" />
 [<link rel="stylesheet" href="(#CHEMIN{factures/facture.css})" type="text/css" media="all" />]
 </head>
-<body>
+<body class="facture-html facture-proforma-html">
 <BOUCLE_facture_proforma(factures_proforma){id_facture_proforma}>[(#ENV{hash,''}|=={#DETAILS|md5}|oui)
 [(#INCLURE{fond=factures/corps_proforma,id_facture_proforma,hash=#ENV{hash,''}})]
 ]</BOUCLE_facture_proforma>
