fix: faciliter l'utilisation du gabarit en utilisant des div sur client et commentaire, ce qui permert d'y utiliser des balises block + encapsuler les details dans un div.details + adaptations CSS correspondantes

--- a/factures/corps.html
+++ b/factures/corps.html
@@ -3,12 +3,14 @@
 	[(#INCLURE{fond=factures/top}{id_facture})]
 	[(#ENV{hash,''}|=={#DETAILS|md5}|oui)
 
-		<h2><:factures:titre_facture:> #NO_COMPTABLE</h2>
+		<h2 class="ref-facture"><:factures:titre_facture:> #NO_COMPTABLE</h2>
 		<p class='date'><:factures:info_facture_date_du:> [(#DATE|affdate)]</p>
-		<p class='client'>#CLIENT</p>
-		[<p class='commentaire'>(#COMMENTAIRE)</p>]
-		#DETAILS
-		[<p class='acquitee'>(#MONTANT_REGLE|=={#MONTANT}|oui)<:factures:info_facture_acquittee_le:>[ (#DATE_PAIEMENT|affdate)]</p>]
+		<div class='client p'>#CLIENT</div>
+		[<div class='commentaire p'>(#COMMENTAIRE)</div>]
+		<div class="details">
+			#DETAILS
+		</div>
+		[<div class='acquitee p'>(#MONTANT_REGLE|=={#MONTANT}|oui)<:factures:info_facture_acquittee_le:>[ (#DATE_PAIEMENT|affdate)]</div>]
 	]
 	[(#INCLURE{fond=factures/pied}{id_facture})]
 </BOUCLE_facture>
