--- a/prive/objets/liste/factures_proforma.html
+++ b/prive/objets/liste/factures_proforma.html
@@ -28,12 +28,12 @@
 				<td class="id"><a href='[(#URL_PAGE{facture_proforma}|parametre_url{id_facture_proforma,#ID_FACTURE_PROFORMA}|parametre_url{hash,#DETAILS|md5})]'>#ID_FACTURE_PROFORMA</a></td>
 				<td class="nocomptable"><a href='[(#URL_PAGE{facture_proforma}|parametre_url{id_facture_proforma,#ID_FACTURE_PROFORMA}|parametre_url{hash,#DETAILS|md5})]' id='f#ID_FACTURE_PROFORMA'>#NO_COMPTABLE</a>
 					[<br /><small>(#INFO_NOM{auteur,#ID_AUTEUR})</small>]</td>
-				<td class="id_auteur"><a href='[(#ID_AUTEUR|generer_url_entite{auteur})]'>#ID_AUTEUR </a></td>
+				<td class="id_auteur"><a href='[(#ID_AUTEUR|generer_objet_url{auteur})]'>#ID_AUTEUR </a></td>
 				<td class="montant_ht">#MONTANT_HT</td>
 				<td class="montant">#MONTANT</td>
 				<td class="date">[<abbr title="[(#DATE|heures_minutes|attribut_html)]">(#DATE|affdate_jourcourt)</abbr>]</td>
 				<td class="parrain">#PARRAIN</td>
-				<td class="transaction">[(#ID_TRANSACTION|oui)<a href="[(#ID_TRANSACTION|generer_url_entite{transaction})]">##ID_TRANSACTION</a>]</td>
+				<td class="transaction">[(#ID_TRANSACTION|oui)<a href="[(#ID_TRANSACTION|generer_objet_url{transaction})]">##ID_TRANSACTION</a>]</td>
 			</tr>
 		</BOUCLE_factures_proforma>
 		</tbody>
